[package]
name = "tests"
edition = "2024"
publish = false

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
filerune_fusion = { workspace = true }
macro_rules_attribute = { workspace = true }
smol = { workspace = true }
smol-macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
